Dark mode fix for dropdown

--- a/src/dark.css
+++ b/src/dark.css
@@ -132,3 +132,8 @@
 #root.darkmode a h2 {
   color: #539ad1;
 }
+
+option {
+  color: #fff;
+  background: #000;
+}
